--- a/index.html
+++ b/index.html
@@ -143,15 +143,16 @@
         <section class="portifolio">
             <div class="interface">
                 <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
+                <p class="paragrafo-projetos">Esta área do meu portifólio ficará meus projetos pessoais, ou realizados trabalhando para alguma empresa, quando novos projetos forem feitos atualizarei esta parte do portifólio.</p>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(imagens/imagem_portfolio.png);">
-                        <div class="overlay">Projeto 1</div>
+                        <div class="overlay">Projeto Em Andamento...</div>
                     </div>
                     <div class="img-port" style="background-image: url(imagens/imagem_portfolio.png);">
-                        <div class="overlay">Projeto 2</div>
+                        <div class="overlay">Projeto Em Andamento...</div>
                     </div>
                     <div class="img-port" style="background-image: url(imagens/imagem_portfolio.png);">
-                        <div class="overlay">Projeto 3</div>
+                        <div class="overlay">Projeto Em Andamento...</div>
                     </div>
                 </div>
             </div>
